[gd_scene load_steps=2 format=3 uid="uid://sv12r2t3448l"]

[ext_resource type="Script" uid="uid://bycjah7yrq2vk" path="res://scenes/screens/MapScreen.gd" id="1_03exp"]

[node name="MapScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03exp")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 6

[node name="CenterWrap" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Canvas" type="Control" parent="CenterWrap"]
custom_minimum_size = Vector2(1080, 1920)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterWrap/Canvas"]
layout_mode = 2
offset_left = 64.0
offset_top = 136.0
offset_right = 504.0
offset_bottom = 472.0
size_flags_horizontal = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnvelopeIcon" type="TextureRect" parent="CenterWrap/Canvas"]
layout_mode = 2
anchor_left = 0.758
anchor_top = 0.179
anchor_right = 0.758
anchor_bottom = 0.179
offset_left = -66.64
offset_top = -167.68
offset_right = 101.36
offset_bottom = -39.68
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="EnvelopeIcon" type="TextureRect" parent="CenterWrap/Canvas/EnvelopeIcon"]
layout_mode = 0
offset_left = -3.0
offset_top = -2.0
offset_right = 88.0
offset_bottom = 71.0

[node name="PathLayer" type="Node2D" parent="CenterWrap/Canvas"]
position = Vector2(16, 8)

[node name="PathLine" type="Line2D" parent="CenterWrap/Canvas/PathLayer"]
texture_repeat = 2
position = Vector2(-8, 8)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
metadata/_edit_group_ = true

[node name="LightsContainer" type="Node2D" parent="CenterWrap/Canvas/PathLayer"]

[node name="StartButton" type="Button" parent="CenterWrap/Canvas"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -272.0
offset_right = 220.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
flat = true
icon_alignment = 1
